kube/backend-no-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder-backend
  labels:
    app: resume-builder-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-builder-backend
  template:
    metadata:
      labels:
        app: resume-builder-backend
    spec:
      containers:
      - name: backend
        image: sainupopzienz/resume-backend:v2
        ports:
        - containerPort: 5000
        command: ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "app:app"]
