kube/backend-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder-backend
  labels:
    app: resume-builder-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-builder-backend
  template:
    metadata:
      labels:
        app: resume-builder-backend
    spec:
      imagePullSecrets:
      - name: docker-registry-secret
      containers:
      - name: backend
        image: sainupopzienz/resume-backend:v2
        ports:
        - containerPort: 5000
        command: ["sh", "-c"]
        args: ["python database.py && gunicorn --bind 0.0.0.0:5000 --workers 4 --timeout 120 --access-logfile - --error-logfile - app:app"]
---
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-backend-service
spec:
  type: NodePort
  selector:
    app: resume-builder-backend
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30090
