kube/frontend-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder-frontend
  labels:
    app: resume-builder-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-builder-frontend
  template:
    metadata:
      labels:
        app: resume-builder-frontend
    spec:
      imagePullSecrets:
      - name: docker-registry-secret
      containers:
      - name: frontend
        image: sainupopzienz/frontent-resume:v4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-frontend-service
spec:
  type: NodePort
  selector:
    app: resume-builder-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30089
