kube/k8s-minimal.yaml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-builder-backend
  template:
    metadata:
      labels:
        app: resume-builder-backend
    spec:
      containers:
      - name: backend
        image: sainupopzienz/resume-backend:v2
        ports:
        - containerPort: 5000
---
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-backend-service
spec:
  selector:
    app: resume-builder-backend
  ports:
  - port: 5000
    targetPort: 5000
---
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-builder-frontend
  template:
    metadata:
      labels:
        app: resume-builder-frontend
    spec:
      containers:
      - name: frontend
        image: sainupopzienz/resume-ui:v1
        ports:
        - containerPort: 80
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-frontend-service
spec:
  selector:
    app: resume-builder-frontend
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
