kube/services-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: resume-builder-frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-backend-service
spec:
  type: LoadBalancer
  selector:
    app: resume-builder-backend
  ports:
  - port: 5000
    targetPort: 5000
