kube/simple-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sainupopzienz/resume-backend:v2
        ports:
        - containerPort: 5000
        command: ["sh", "-c"]
        args: ["python database.py && gunicorn --bind 0.0.0.0:5000 --workers 4 app:app"]
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30090
  type: NodePort
